# sentiment-analysis-tweets

./: .pre-commit-config.yaml  LICENSE  README.md  ldavis.html  main.py  pyproject.toml  requirements.txt  tweets.keras
notebooks/: .gitignore  1.EDA_Tweets.ipynb  1.analise-exploratoria-dados.ipynb  2.embeddings_tweets.ipynb  3.1.modelagem_part1.ipynb  3.2modelagem_part2.ipynb  3.modelagel.ipynb  3.modelagem_basica.ipynb  4.topicos.ipynb
