[tool.poetry]
name = "tweets-covid"
version = "0.1.0"
description = "Análise de tweets coletados durante a pandemia da Covid-19."
authors = ["Jessica Sousa <jessicasousa.pc@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tweets_covid"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
wordcloud = "^1.9.3"
ipykernel = "^6.29.3"
kaggle = "^1.6.6"
spacy = "^3.7.4"
ipywidgets = "^8.1.2"
scikit-learn = "^1.4.1.post1"
plotly = "^5.19.0"
nbformat = "^5.9.2"
sentence-transformers = "^2.5.1"
evaluate = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
